--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "bootstrap": "^5.3.7",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.6.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^18.0.0",
     "@types/react": "^18.2.37",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.17",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3"
   }
 }
