--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.6.2"
+    "recharts": "^2.6.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
